@@ -51,6 +51,7 @@ zoom_in_button BITMAP "bitmaps/zoom_in.bmp"
 zoom_out_button BITMAP "bitmaps/zoom_out.bmp"
 font_collector_button BITMAP "bitmaps/fontcollect.bmp"
 hotkeys_button BITMAP "bitmaps/hotkeys.bmp"
+attach_button BITMAP "bitmaps/attach.bmp"
 substart_to_video BITMAP "bitmaps/substart_to_video.bmp"
 subend_to_video BITMAP "bitmaps/subend_to_video.bmp"
 video_to_substart BITMAP "bitmaps/video_to_substart.bmp"
